force-app/main/default/objects/BMCServiceDesk__ClientUrgency__c/BMCServiceDesk__ClientUrgency__c.object-meta.xml
<CustomObject>
    <description>This object allows you to store data for the urgency assigned to clients.</description>
    <label>ClientUrgency</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Staff Urgency</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ClientUrgencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>