force-app/main/default/objects/BMCServiceDesk__ClientUrgency__c/fields/BMCServiceDesk__clientName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__clientName__c</fullName>
    <formula>BMCServiceDesk__FKClient__r.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Name</label>
    <type>Text</type>
</CustomField>