force-app/main/default/objects/BMCServiceDesk__ClientUrgency__c/fields/BMCServiceDesk__FKClient__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKClient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Client</description>
    <label>FKClient</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UserUrgencies</relationshipName>
    <type>Lookup</type>
</CustomField>