force-app/main/default/objects/BMCServiceDesk__ClientUrgency__c/fields/BMCServiceDesk__FKUrgency__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKUrgency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Urgency</description>
    <label>FKUrgency</label>
    <referenceTo>BMCServiceDesk__Urgency__c</referenceTo>
    <relationshipName>UserUrgencies</relationshipName>
    <type>Lookup</type>
</CustomField>