force-app/main/default/objects/BMCServiceDesk__ClientUrgency__c/fields/BMCServiceDesk__urgencyName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__urgencyName__c</fullName>
    <formula>BMCServiceDesk__FKUrgency__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Urgency Name</label>
    <type>Text</type>
</CustomField>